English do you speak it ? I clearly don't

--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>Hello World from Serveur Two</h1>
+<h1>Hello World from Server Two</h1>
 <p>If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required.</p>
 
