--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>Hello World from Serveur One</h1>
+<h1>Hello World from Server One</h1>
 <p>If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required.</p>
 
